fix: change java version